# aa-v2

./: .gitignore  Android.bp  CLAUDE.md  CMakeLists.txt  README.md
aa/core/include/aauto/session/: AapHandshaker.hpp
aa/core/src/session/: AapHandshaker.cpp
aidl/: Android.bp
aidl/com/aauto/engine/: IAAEngine.aidl  IAAEngineCallback.aidl
app/android/: Android.bp  AndroidManifest.xml
app/android/permissions/: privapp-permissions-com.aauto.app.xml
app/android/res/xml/: device_filter.xml
app/android/src/com/aauto/app/: AaApplication.java  AaDisplayActivity.java  AaService.java  AudioPlayer.java  BluetoothPairingCoordinator.java  DeviceListActivity.java  EngineConnectionManager.java  HotspotConfigProvider.java  PlaybackController.java  SessionLifecycleController.java  SessionLifecycleListener.java  SessionManager.java  UiNavigationController.java  UsbMonitor.java  UsbSessionCoordinator.java  VideoDecoder.java  WirelessSessionCoordinator.java  WirelessStateTracker.java
app/android/src/com/aauto/app/wireless/: BluetoothWirelessManager.java  BtProfileGate.java
core/: Android.bp  CMakeLists.txt
core/include/aauto/crypto/: AapKeys.hpp  ICryptoStrategy.hpp
core/include/aauto/engine/: Engine.hpp  HeadunitConfig.hpp  IEngineController.hpp
core/include/aauto/service/: AudioService.hpp  BluetoothService.hpp  ControlService.hpp  GenericNotificationService.hpp  IService.hpp  InputService.hpp  MediaBrowserService.hpp  MediaPlaybackService.hpp  MicrophoneService.hpp  NavigationStatusService.hpp  PhoneStatusService.hpp  SensorService.hpp  ServiceBase.hpp  VendorExtensionService.hpp  VideoService.hpp
core/include/aauto/session/: Framer.hpp  HandshakeCoordinator.hpp  InboundMessageAssembler.hpp  OutboundMessageEncoder.hpp  Session.hpp  SessionState.hpp
core/include/aauto/sink/: CallbackAudioSink.hpp  CallbackVideoSink.hpp  IAudioSink.hpp  IVideoSink.hpp
core/include/aauto/source/: IInputSource.hpp  ISensorSource.hpp
core/include/aauto/transport/: BufferedTransport.hpp  ITransport.hpp
core/include/aauto/utils/: Logger.hpp  ProtobufCompat.hpp  ProtocolConstants.hpp  ProtocolUtil.hpp
core/src/crypto/: AapKeys.cpp
core/src/engine/: Engine.cpp
core/src/service/: AudioService.cpp  BluetoothService.cpp  ControlService.cpp  GenericNotificationService.cpp  InputService.cpp  MediaBrowserService.cpp  MediaPlaybackService.cpp  MicrophoneService.cpp  NavigationStatusService.cpp  PhoneStatusService.cpp  SensorService.cpp  VendorExtensionService.cpp  VideoService.cpp
core/src/session/: Framer.cpp  HandshakeCoordinator.cpp  InboundMessageAssembler.cpp  OutboundMessageEncoder.cpp  Session.cpp
core/src/transport/: BufferedTransport.cpp
core/src/utils/: Logger.cpp  ProtocolConstants.cpp
docs/: aap_messages.md  architecture_review.md  platform_constraints.md  protocol.md  refactoring_assessment.md  test_strategy.md  troubleshooting.md
docs/plans/: 0001_implementation_plan.md  0002_core_architecture_design.md  0003_phase5_aidl_app_layer.md  0004_phase6_wireless_aa.md  0005_media_browser.md  0006_cluster_display.md  0007_proto_reverse_engineering.md  0008_phone_status.md  0009_bluetooth_service.md
impl/: Android.bp  aa-engine.rc
impl/android/aidl/: AidlEngineController.cpp  AidlEngineController.hpp
impl/android/main/: main.cpp
impl/android/sink/: AMediaCodecVideoSink.cpp  AMediaCodecVideoSink.hpp
impl/android/transport/: AndroidTcpTransport.cpp  AndroidTcpTransport.hpp  AndroidUsbTransport.cpp  AndroidUsbTransport.hpp
impl/common/crypto/: OpenSslCryptoStrategy.cpp  OpenSslCryptoStrategy.hpp
protobuf/: Android.bp  CMakeLists.txt
protobuf/aap_protobuf/channel/control/: GoogleDiagnosticsVendorExtensionMessageId.proto  InstrumentClusterInput.proto  SessionConfiguration.proto
protobuf/aap_protobuf/service/: Service.proto
protobuf/aap_protobuf/service/bluetooth/: BluetoothService.proto
protobuf/aap_protobuf/service/control/: ControlMessageType.proto
protobuf/aap_protobuf/service/control/message/: ServiceDiscoveryResponse.proto  ServiceDiscoveryUpdate.proto
protobuf/aap_protobuf/service/mediaplayback/: MediaPlaybackStatusService.proto
protobuf/aap_protobuf/service/navigationstatus/: NavigationStatusService.proto
protobuf/aap_protobuf/service/phonestatus/: PhoneStatusService.proto
protobuf/aap_protobuf/shared/: MessageStatus.proto  PhoneInfo.proto
sepolicy/: aa_engine.te  file_contexts  service.te  service_contexts
tests/: Android.bp  CMakeLists.txt
tests/core/: buffered_transport_test.cpp  control_service_test.cpp  engine_test.cpp  framer_test.cpp  handshake_coordinator_test.cpp  inbound_message_assembler_test.cpp  outbound_message_encoder_test.cpp  placeholder_test.cpp  session_handshake_test.cpp
tests/core/mock/: MockCrypto.hpp  MockSessionObserver.hpp  MockTransport.hpp  RecordingSink.hpp
